# chess2

./: .gitignore  README.md  ai.py  killrl.sh  main.py  make_data.sh  make_data_range.sh  make_data_whole.sh  pip_requirements.txt  pip_setup.sh  player.py  rl.html  rl.py  stockfish_model.pt  stockfish_model2.pt  stockfish_model_rl2.pt  stockfish_model_rl_genetic.pt  stockfish_model_small.pt  stockfish_model_small2.pt  stockfish_model_small3.pt  stockfish_model_small3.py  test.html  test_loss.txt  watch.py
cpp/: CMakeLists.txt  main.py  run.sh  setup.py
cpp/include/: main.h
cpp/src/: main.cpp
cpp/torch_test/: CMakeLists.txt  example-app.cpp
rust/: Cargo.toml
rust/src/: main.rs
